<resources>
    <string name="app_name">Droppyn</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="shoe_image">Shoe Image</string>
    <string name="my_offers">My Offers</string>
    <string name="image_of_a_shoe_offer">Image of a shoe offer</string>
    <string name="price">Price (PLN)</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="bio">Bio</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="shoes">Shoes</string>
    <string name="offers">Offers</string>
    <string name="profile_image">Profile image</string>
    <string name="us">US</string>
    <string name="eur">EUR</string>
    <string name="uk">UK</string>
    <string name="usd_sign">$</string>
    <string name="create">Create</string>
    <string name="select_shoes">Select Shoes</string>
    <string name="filter">Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="delete_filter">Delete Filter</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>


    <string name="log_in_to">Log in to DROPPYN</string>
    <string name="log_in">Log in</string>
    <string name="create_account_title">Create your account</string>
    <string name="signin_already_have_an_account">Have an account already?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username">Username</string>
    <string name="signup">Sign up</string>
    <string name="seller">Seller</string>
    <string name="settings">Settings</string>
    <string name="pln">PLN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>