<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.droppyn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_myOfferFragment"
            app:destination="@id/myOfferFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.droppyn.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop"/>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.droppyn.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.droppyn.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/myOfferFragment"
        android:name="com.droppyn.ui.myoffer.MyOfferFragment"
        android:label="fragment_my_offer"
        tools:layout="@layout/fragment_my_offer" >
        <action
            android:id="@+id/action_myOfferFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>