<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingsViewModel"
            type="com.droppyn.ui.settings.SettingsViewModel" />
        <variable
            name="user"
            type="com.droppyn.domain.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/form"
        tools:context=".ui.settings.SettingsFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> settingsViewModel.navBack()}"
            android:src="@drawable/ic_round_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/firstname"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_offer_price"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_offer_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_text">

            <EditText
                android:id="@+id/offer_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@={settingsViewModel.firstname}"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/surname_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/surname"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_offer_price"
            app:layout_constraintTop_toBottomOf="@+id/card_offer_price" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_offer_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname_title_text">

            <EditText
                android:id="@+id/surname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@={settingsViewModel.surname}" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/email_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_offer_price"
            app:layout_constraintTop_toBottomOf="@+id/card_offer_surname" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title_text">

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:inputType="none"
                android:enabled="false"
                android:text="@={settingsViewModel.email}" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/phone_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_offer_price"
            app:layout_constraintTop_toBottomOf="@+id/card_email" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_title_text">

            <EditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@={settingsViewModel.phone}"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bio_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/bio"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_offer_price"
            app:layout_constraintTop_toBottomOf="@+id/card_phone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_title_text">

            <EditText
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@={settingsViewModel.bio}"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/offer_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> settingsViewModel.saveSettings()}"
            android:text="@string/save"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/card_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>