<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myOfferViewModel"
            type="com.droppyn.ui.myoffer.MyOfferViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/form">

        <include
            android:id="@+id/include"
            layout="@layout/shoe_detail"
            app:shoe="@{myOfferViewModel.myOffer.shoe}" />


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_offer_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"

                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <EditText
                        android:id="@+id/offer_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="4dp"
                        android:autofillHints="@string/price"
                        android:hint="@string/price"
                        android:inputType="numberSigned|number|numberDecimal"
                        android:singleLine="true"
                        android:text="@={myOfferViewModel.price}"/>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/size" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_size_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/offer_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="4dp"
                        android:text="@{Double.toString(myOfferViewModel.myOffer.size.us)}" />


                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/bio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bio" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <EditText
                        android:id="@+id/offer_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="4dp"
                        android:singleLine="false"
                        android:text="@={myOfferViewModel.bio}" />


                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/offer_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="64dp"
                    android:onClick="@{() -> myOfferViewModel.save()}"
                    android:text="@string/save"
                    app:cornerRadius="10dp"/>
            </LinearLayout>
        </ScrollView>







    </LinearLayout>
</layout>